ref #274 - fixed project name in table